name:                haskellnews
version:             0.1.0.0
synopsis:            Haskell news.
homepage:            http://haskellnews.org/
license:             BSD3
license-file:        LICENSE
author:              Chris Done
maintainer:          chrisdone@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.8

executable haskellnews
  build-depends:       base >=4 && < 5,
                       snap-app >= 0.6.0,
                       blaze-html   >= 0.6,
                       blaze-markup >= 0.5,
                       snap-server,
                       snap-core,
                       utf8-string,
                       bytestring,
                       mtl,
                       mime-mail,
                       postgresql-simple,
                       text,
                       data-default,
                       time,
                       ConfigFile,
                       HUnit,
                       network,
                       feed,
                       old-locale,
                       curl,
                       split,
                       tagsoup,
                       filepath,
                       directory,
                       github,
                       http-types,
                       http-conduit
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -Wall -fno-warn-unused-do-bind
