name:                haskellnews
version:             0.1.1.0
synopsis:            Haskell news.
homepage:            http://haskellnews.org/
license:             BSD3
license-file:        LICENSE
author:              Chris Done
maintainer:          chrisdone@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.8

executable haskellnews
  build-depends:       base >=4 && < 5,
                       snap-app,
                       blaze-html,
                       blaze-markup,
                       snap-server,
                       snap-core,
                       utf8-string,
                       bytestring,
                       mtl,
                       mime-mail,
                       postgresql-simple,
                       text,
                       data-default,
                       time,
                       ConfigFile,
                       HUnit,
                       network,network-uri,
                       feed >= 0.3.9.2,
                       old-locale,
                       curl,
                       split,
                       tagsoup,
                       filepath,
                       directory,
                       github,
                       http-types,
                       http-conduit,
                       MonadCatchIO-mtl
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -Wall -fno-warn-unused-do-bind
  default-extensions: FlexibleContexts
  other-modules:
    Control.Monad.IO
    Data.String.Extra
    Data.Time.Relative
    HN.Blaze
    HN.Config
    HN.Controllers
    HN.Curl
    HN.Data
    HN.Model
    HN.Model.Feeds
    HN.Model.Github
    HN.Model.Import
    HN.Model.Items
    HN.Model.Migrations
    HN.Model.Soup
    HN.Monads
    HN.Prelude
    HN.Server
    HN.System
    HN.Types
    HN.Util
    HN.View
    HN.View.Home
    HN.View.Template
    TagSoup
    Text.Blaze.Bootstrap
    Text.Blaze.Linkify
    Text.Links
