name:                MonadCatchIO-mtl
version:             0.3.1.0
description:
        Provides a monad-transformer version of the @Control.Exception.catch@
        function. For this, it defines the @MonadCatchIO@ class, a subset of
        @MonadIO@. It defines proper instances for most monad transformers in
        the 'mtl' library.

synopsis:           Monad-transformer version of the Control.Exception module
category:           Control
license:            BSD3
license-file:       LICENSE
maintainer:         jcpetruzza@gmail.com
homepage:           http://darcsden.com/jcpetruzza/MonadCatchIO-mtl

cabal-version:      >= 1.4
build-type:         Simple
tested-with:        GHC==6.12.3, GHC==7.0.3, GHC==7.2.1, GHC==7.4.2, GHC==7.6.0

Library
  build-depends:    base < 5, extensible-exceptions, MonadCatchIO-transformers
  extensions:       PackageImports

  exposed-modules: Control.Monad.CatchIO
